Fix width of react table to prevent scrollbar

--- a/app/components/ExptManager.css
+++ b/app/components/ExptManager.css
@@ -69,7 +69,6 @@
 .ReactTable {
   position: absolute;
   left: -5px;
-  width: 1050px;
   color: white;
 }
 
